// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
        data-text="Others"
        title="Others"
      >
        Others
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
        data-text="Not Kibana"
        title="Not Kibana"
      >
        Not Kibana
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter renders 1`] = `
<button
  aria-pressed="false"
  class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </span>
</button>
`;
